# sanic-x402

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml  release.yml
examples/: weather.py
sanic_x402/: __init__.py  adapter.py  decorator.py  exceptions.py  ext.py  extension.py
tests/: conftest.py  test_currencies.py  test_decorator.py  test_paid_routes.py  test_sanic_ext.py
